Work on moving database entities/repositories into 1 module due to circular deps

--- a/apps/web/public/css/imagine.css
+++ b/apps/web/public/css/imagine.css
@@ -1,3 +1,9 @@
 .nav-item.dropdown:hover .dropdown-menu {
     display: block;
 }
+
+footer {
+    position: absolute !important;
+    bottom: 0;
+    width: 100%;
+}
