--- a/apps/boon-web/public/css/imagine.css
+++ b/apps/boon-web/public/css/imagine.css
@@ -1,3 +1,16 @@
+html, body, #root {
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .nav-item.dropdown:hover .dropdown-menu {
     display: block;
+}
+
+#footer {
+    height: 200px;
 }
