add carousel slider to modern flat theme

--- a/apps/modern-flat-web/public/css/style.css
+++ b/apps/modern-flat-web/public/css/style.css
@@ -9218,3 +9218,12 @@ body {
   font: 12px "Poppins", "Roboto", sans-serif;
   color: rgba(0, 0, 0, 0.3);
 }
+
+html, body, #root {
+  min-width: 100%;
+  min-height: 100%;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
