--- a/apps/modern-flat-web/src/screens/login-screen/LoginScreen.css
+++ b/apps/modern-flat-web/src/screens/login-screen/LoginScreen.css
@@ -13,15 +13,15 @@
   padding: 0;
 }
 
-.container {
+.login-page .container {
   position: relative;
 }
 
-.clear {
+.login-page .clear {
   clear: both;
 }
 
-.error-msg {
+.login-page .error-msg {
   background: #ef5350;
   height: 40px;
   width: 100%;
@@ -33,7 +33,7 @@
   z-index: 9;
 }
 
-.hero {
+.login-page .hero {
   background: #94c1d3;
   height: 100%;
   width: 100%;
@@ -45,7 +45,7 @@
   filter: drop-shadow(1px 1px 0 #fff) drop-shadow(-1px 0px 0 #fff) drop-shadow(0 -1px 0 #fff);
 }
 
-.hero .hotel {
+.login-page .hero .hotel {
   background: url(/img/index/header-hotel.png) center top;
   height: 950px;
   width: 930px;
@@ -54,12 +54,12 @@
   bottom: 0;
 }
 
-#header-content {
+.login-page #header-content {
   height: 110px;
   width: 100%;
 }
 
-#header-content .logo {
+.login-page #header-content .logo {
   background: url(/img/bobbalogo_big_whiteR_beta.png);
   height: 73px;
   width: 197px;
@@ -67,7 +67,7 @@
   float: left;
 }
 
-#header-content .online-count {
+.login-page #header-content .online-count {
   position: absolute;
   left: 270px;
   top: 80px;
@@ -75,7 +75,7 @@
   color: rgba(21, 32, 56, 0.7);
 }
 
-#header-content .online-count:before {
+.login-page #header-content .online-count:before {
   background: url(/img/index/online-hotel.png);
   height: 26px;
   width: 21px;
@@ -84,29 +84,29 @@
   position: absolute;
 }
 
-#header-content .online-count b {
+.login-page #header-content .online-count b {
   color: rgba(21, 32, 56, 0.9);
 }
 
-.login-position {
+.login-page .login-position {
   position: relative;
   top: 110px;
   width: 100%;
   height: 95%;
 }
 
-.login-position h2 {
+.login-page .login-position h2 {
   font: 600 200% "Poppins", "Roboto", sans-serif;
 }
 
-.login-position label {
+.login-page .login-position label {
   display: block;
   font: 600 13.5px "Poppins", "Roboto", sans-serif;
   color: rgba(21, 32, 56, 0.7);
   margin: 0 0 5px 0;
 }
 
-.login-position input[type=text], .login-position input[type=password] {
+.login-page .login-position input[type=text], .login-position input[type=password] {
   background: #fff;
   padding: 13px;
   border: 2px solid rgba(0, 0, 0, 0.1);
@@ -120,15 +120,15 @@
   transition: border .2s;
 }
 
-.login-position input[type=text]:last-child, .login-position input[type=password]:last-child {
+.login-page .login-position input[type=text]:last-child, .login-position input[type=password]:last-child {
   margin: 0 0 0 0;
 }
 
-.login-position input[type=text]:focus, .login-position input[type=text]:active, .login-position input[type=password]:focus, .login-position input[type=password]:active {
+.login-page .login-position input[type=text]:focus, .login-position input[type=text]:active, .login-position input[type=password]:focus, .login-position input[type=password]:active {
   border: 2px solid #94c1d3;
 }
 
-.login-position p {
+.login-page .login-position p {
   display: block;
   text-align: center;
   text-transform: uppercase;
@@ -137,7 +137,7 @@
   margin: 20px 0;
 }
 
-.btn {
+.login-page .btn {
   border-radius: 5px;
   font: 600 12px "Poppins", "Roboto", sans-serif;
   text-decoration: none;
@@ -153,57 +153,57 @@
   text-align: center;
 }
 
-.btn.big {
+.login-page .btn.big {
   padding: 15px 40px;
   font: 600 13px "Poppins", "Roboto", sans-serif;
   text-transform: uppercase;
 }
 
-.btn.green {
+.login-page .btn.green {
   background: #52be80;
 }
 
-.btn.green:hover {
+.login-page .btn.green:hover {
   background: #57ca89;
 }
 
-.btn.orange {
+.login-page .btn.orange {
   background: #ffca28;
 }
 
-.btn.orange:hover {
+.login-page .btn.orange:hover {
   background: #ffe082;
 }
 
-.btn.red {
+.login-page .btn.red {
   background: #ef5350;
 }
 
-.btn.red:hover {
+.login-page .btn.red:hover {
   background: #e57373;
 }
 
-.btn.disabled {
+.login-page .btn.disabled {
   background: #cfd8dc;
   cursor: default;
 }
 
-.btn.disabled:hover {
+.login-page .btn.disabled:hover {
   background: #cfd8dc;
 }
 
-.btn.login-button {
+.login-page .btn.login-button {
   position: relative;
   float: right;
 }
 
-.btn.register-button {
+.login-page .btn.register-button {
   position: relative;
   width: 100%;
   float: left;
 }
 
-.btn.back-register {
+.login-page .btn.back-register {
   float: left;
   position: relative;
   padding: 10px 20px;
@@ -211,7 +211,7 @@
   text-transform: uppercase;
 }
 
-.btn.next-register {
+.login-page .btn.next-register {
   float: right;
   position: relative;
   padding: 10px 20px;
@@ -219,75 +219,29 @@
   text-transform: uppercase;
 }
 
-.btn.check-in-header {
+.login-page .btn.check-in-header {
   position: absolute;
   right: 0;
   top: 60px;
 }
 
-.btn.news-slider-btn {
+.login-page .btn.news-slider-btn {
   position: absolute;
   right: 60px;
   top: 14px;
 }
 
-.btn.news-card-btn {
+.login-page .btn.news-card-btn {
   position: absolute;
   right: 20px;
   bottom: 14px;
 }
-#footer-content {
-  text-align: center;
-  width: 100%;
-  margin: 50px 0 50px 0;
-}
-
-#footer-content .footer-links {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: block;
-}
-
-#footer-content .footer-links li {
-  display: inline;
-}
-
-#footer-content .footer-links li a {
-  text-align: center;
-  font: 500 12px "Poppins", "Roboto", sans-serif;
-  text-decoration: none;
-  color: rgba(0, 0, 0, 0.4);
-  -webkit-transition: color .2s;
-  transition: color .2s;
-}
-
-#footer-content .footer-links li a:hover {
-  color: rgba(0, 0, 0, 0.25);
-}
-
-#footer-content .footer-links li:after {
-  content: '/';
-  color: rgba(0, 0, 0, 0.5);
-  padding: 0 20px 0 20px;
-  margin: 20px 0 50px 0;
-  font-size: 8px;
-}
-
-#footer-content .footer-links li:last-child:after {
-  content: none;
-}
-
-#footer-content p {
-  font: 12px "Poppins", "Roboto", sans-serif;
-  color: rgba(0, 0, 0, 0.3);
-}
 
 @media (max-width: 576px) {
-  #header-content {
+  .login-page #header-content {
     width: 100%;
   }
-  #header-content .logo {
+  .login-page #header-content .logo {
     background: url(/img/bobbalogo_big_whiteR_beta.png);
     height: 73px;
     width: 197px;
@@ -296,29 +250,29 @@
     float: none;
     margin-bottom: 20px;
   }
-  #header-content .online-count {
+  .login-page #header-content .online-count {
     position: relative;
     left: 0;
     top: 0;
     text-align: center;
     margin: 0 -15px 0 0;
   }
-  .login-position {
+  .login-page .login-position {
     height: auto;
   }
-  .community-photos {
+  .login-page  .community-photos {
     display: none;
   }
-  #footer-content {
+  .login-page #footer-content {
     display: none;
   }
 }
 
 @media (max-width: 768px) {
-  #header-content {
+  .login-page #header-content {
     width: 100%;
   }
-  #header-content .logo {
+  .login-page #header-content .logo {
     background: url(/img/bobbalogo_big_whiteR_beta.png);
     height: 73px;
     width: 197px;
@@ -327,20 +281,20 @@
     float: none;
     margin-bottom: 20px;
   }
-  #header-content .online-count {
+  .login-page #header-content .online-count {
     position: relative;
     left: 0;
     top: 0;
     text-align: center;
     margin: 0 -15px 0 0;
   }
-  .login-position {
+  .login-page .login-position {
     height: auto;
   }
-  .community-photos {
+  .login-page .community-photos {
     display: none;
   }
-  #footer-content {
+  .login-page #footer-content {
     display: none;
   }
 }
