stash changes for now

--- a/apps/levlo-web/src/screens/login-screen/LoginScreen.css
+++ b/apps/levlo-web/src/screens/login-screen/LoginScreen.css
@@ -1,300 +1,1 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900|Roboto:300,400,500,700,900";
-@import "https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap-grid.css";
-
-.login-page {
-  background: #fcfcfc !important;
-  color: #152038;
-  font: 400 13px "Poppins", "Roboto", sans-serif;
-  min-width: 100%;
-  min-height: 100%;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.login-page .container {
-  position: relative;
-}
-
-.login-page .clear {
-  clear: both;
-}
-
-.login-page .error-msg {
-  background: #ef5350;
-  height: 40px;
-  width: 100%;
-  text-align: center;
-  font: 600 15px "Poppins", "Roboto", sans-serif;
-  color: #fff;
-  padding: 8px;
-  position: absolute;
-  z-index: 9;
-}
-
-.login-page .hero {
-  background: #94c1d3;
-  height: 100%;
-  width: 100%;
-  -webkit-clip-path: polygon(40% 0, 100% 0%, 100% 100%, 65% 100%);
-  clip-path: polygon(40% 0, 100% 0%, 100% 100%, 65% 100%);
-  position: absolute;
-  right: 0;
-  -webkit-filter: drop-shadow(1px 1px 0 #fff) drop-shadow(-1px 0px 0 #fff) drop-shadow(0 -1px 0 #fff);
-  filter: drop-shadow(1px 1px 0 #fff) drop-shadow(-1px 0px 0 #fff) drop-shadow(0 -1px 0 #fff);
-}
-
-.login-page .hero .hotel {
-  background: url(/img/index/header-hotel.png) center top;
-  height: 950px;
-  width: 930px;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-
-.login-page #header-content {
-  height: 110px;
-  width: 100%;
-}
-
-.login-page #header-content .logo {
-  background: url(/img/bobbalogo_big_whiteR_beta.png);
-  height: 73px;
-  width: 197px;
-  margin: 50px 0 0 0;
-  float: left;
-}
-
-.login-page #header-content .online-count {
-  position: absolute;
-  left: 270px;
-  top: 80px;
-  font: 600 13px "Poppins", "Roboto", sans-serif;
-  color: rgba(21, 32, 56, 0.7);
-}
-
-.login-page #header-content .online-count:before {
-  background: url(/img/index/online-hotel.png);
-  height: 26px;
-  width: 21px;
-  content: '';
-  margin: -5px 0 0 -30px;
-  position: absolute;
-}
-
-.login-page #header-content .online-count b {
-  color: rgba(21, 32, 56, 0.9);
-}
-
-.login-page .login-position {
-  position: relative;
-  top: 110px;
-  width: 100%;
-  height: 95%;
-}
-
-.login-page .login-position h2 {
-  font: 600 200% "Poppins", "Roboto", sans-serif;
-}
-
-.login-page .login-position label {
-  display: block;
-  font: 600 13.5px "Poppins", "Roboto", sans-serif;
-  color: rgba(21, 32, 56, 0.7);
-  margin: 0 0 5px 0;
-}
-
-.login-page .login-position input[type=text], .login-position input[type=password] {
-  background: #fff;
-  padding: 13px;
-  border: 2px solid rgba(0, 0, 0, 0.1);
-  outline: none;
-  border-radius: 5px;
-  width: 100%;
-  margin: 0 0 30px 0;
-  font: 500 13px "Poppins", "Roboto", sans-serif;
-  color: rgba(21, 32, 56, 0.7);
-  -webkit-transition: border .2s;
-  transition: border .2s;
-}
-
-.login-page .login-position input[type=text]:last-child, .login-position input[type=password]:last-child {
-  margin: 0 0 0 0;
-}
-
-.login-page .login-position input[type=text]:focus, .login-position input[type=text]:active, .login-position input[type=password]:focus, .login-position input[type=password]:active {
-  border: 2px solid #94c1d3;
-}
-
-.login-page .login-position p {
-  display: block;
-  text-align: center;
-  text-transform: uppercase;
-  font: 600 12px "Poppins", "Roboto", sans-serif;
-  color: rgba(21, 32, 56, 0.4);
-  margin: 20px 0;
-}
-
-.login-page .btn {
-  border-radius: 5px;
-  font: 600 12px "Poppins", "Roboto", sans-serif;
-  text-decoration: none;
-  color: #fff;
-  -webkit-transition: background .2s;
-  transition: background .2s;
-  padding: 10px 20px;
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
-  border: none;
-  outline: none;
-  cursor: pointer;
-  text-align: center;
-}
-
-.login-page .btn.big {
-  padding: 15px 40px;
-  font: 600 13px "Poppins", "Roboto", sans-serif;
-  text-transform: uppercase;
-}
-
-.login-page .btn.green {
-  background: #52be80;
-}
-
-.login-page .btn.green:hover {
-  background: #57ca89;
-}
-
-.login-page .btn.orange {
-  background: #ffca28;
-}
-
-.login-page .btn.orange:hover {
-  background: #ffe082;
-}
-
-.login-page .btn.red {
-  background: #ef5350;
-}
-
-.login-page .btn.red:hover {
-  background: #e57373;
-}
-
-.login-page .btn.disabled {
-  background: #cfd8dc;
-  cursor: default;
-}
-
-.login-page .btn.disabled:hover {
-  background: #cfd8dc;
-}
-
-.login-page .btn.login-button {
-  position: relative;
-  float: right;
-}
-
-.login-page .btn.register-button {
-  position: relative;
-  width: 100%;
-  float: left;
-}
-
-.login-page .btn.back-register {
-  float: left;
-  position: relative;
-  padding: 10px 20px;
-  font: 600 13px "Poppins", "Roboto", sans-serif;
-  text-transform: uppercase;
-}
-
-.login-page .btn.next-register {
-  float: right;
-  position: relative;
-  padding: 10px 20px;
-  font: 600 13px "Poppins", "Roboto", sans-serif;
-  text-transform: uppercase;
-}
-
-.login-page .btn.check-in-header {
-  position: absolute;
-  right: 0;
-  top: 60px;
-}
-
-.login-page .btn.news-slider-btn {
-  position: absolute;
-  right: 60px;
-  top: 14px;
-}
-
-.login-page .btn.news-card-btn {
-  position: absolute;
-  right: 20px;
-  bottom: 14px;
-}
-
-@media (max-width: 576px) {
-  .login-page #header-content {
-    width: 100%;
-  }
-  .login-page #header-content .logo {
-    background: url(/img/bobbalogo_big_whiteR_beta.png);
-    height: 73px;
-    width: 197px;
-    position: relative;
-    margin: 50px auto;
-    float: none;
-    margin-bottom: 20px;
-  }
-  .login-page #header-content .online-count {
-    position: relative;
-    left: 0;
-    top: 0;
-    text-align: center;
-    margin: 0 -15px 0 0;
-  }
-  .login-page .login-position {
-    height: auto;
-  }
-  .login-page  .community-photos {
-    display: none;
-  }
-  .login-page #footer-content {
-    display: none;
-  }
-}
-
-@media (max-width: 768px) {
-  .login-page #header-content {
-    width: 100%;
-  }
-  .login-page #header-content .logo {
-    background: url(/img/bobbalogo_big_whiteR_beta.png);
-    height: 73px;
-    width: 197px;
-    position: relative;
-    margin: 50px auto;
-    float: none;
-    margin-bottom: 20px;
-  }
-  .login-page #header-content .online-count {
-    position: relative;
-    left: 0;
-    top: 0;
-    text-align: center;
-    margin: 0 -15px 0 0;
-  }
-  .login-page .login-position {
-    height: auto;
-  }
-  .login-page .community-photos {
-    display: none;
-  }
-  .login-page #footer-content {
-    display: none;
-  }
-}
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700);body{background:#282C34;color:#fff;font:14px Roboto,sans-serif;user-select:none;-webkit-user-select:none;-moz-user-select:none;-o-user-select:none}::-webkit-scrollbar-track{background:#191c21}::-webkit-scrollbar{width:10px}::-webkit-scrollbar-thumb{background:#111317}a,a:active,a:focus,a:hover{text-decoration:none;color:#fff}.container{position:absolute;top:0;bottom:0;left:0;right:0;height:640px;margin:auto}@media(max-width:786px){.container{position:static;bottom:none;margin-top:6px}}.content-box{height:500px;background:#21252B;width:100%;border:2px solid #2C323C;border-radius:2px;-webkit-border-radius:2px;position:relative;margin-bottom:10px}.content-box .login-footer{background:#2C323C;border-top-left-radius:2px;-webkit-border-top-left-radius:2px;border-top-right-radius:2px;-webkit-border-top-right-radius:2px;padding:20px;height:115px;position:relative;z-index:1;display:block}.content-box .login-footer .logo{background:url(/img/hubbu-logo.png) center center no-repeat;height:75px;width:228px;float:left}.content-box .username-position{position:absolute;right:420px;top:25px;width:220px}.content-box .username-position label{display:block}@media(max-width:768px){.content-box .username-position{display:none}}.content-box .password-position{position:absolute;right:180px;top:25px;width:220px}.content-box .password-position label{display:block}.content-box .button-position{position:absolute;right:20px;top:47px}.content-box .button-position button{background:#00965a;padding:10px 30px;border-radius:2px;-webkit-border-radius:2px;text-transform:uppercase;letter-spacing:.5px;color:#fff;font:500 14px Roboto,sans-serif;box-shadow:0 2px 1px rgba(0,0,0,.05);transition:background 3s;border:none}.content-box .button-position button:hover{background:#00bc71;text-decoration:none}@media(max-width:768px){.content-box .button-position,.content-box .password-position{display:none}}.content-box input[type=password],.content-box input[type=text]{background:#fff;width:100%;border-radius:2px;-webkit-border-radius:2px;border:none;outline:0;padding:10px;color:#333}.content-box .error-message{background:#c0392b;width:100%;position:absolute;text-align:center;padding:10px;z-index:1}.content-box .image{background:url(/img/frontpage/t1_main_full.png) center bottom no-repeat;background-size:2045px;image-rendering:pixelated;height:100%;width:100%;opacity:.1;position:absolute;bottom:0}.content-box .onlineBubble{background:#fff;border-radius:2px;-webkit-border-radius:2px;padding:15px;width:130px;position:absolute;right:130px;top:230px;color:#333;text-align:center;font-size:13px;z-index:9}.content-box .onlineBubble:after{content:"";border-style:solid;border-color:#fff transparent transparent;border-width:10px;position:absolute;margin-left:-45px;margin-top:30px}.content-box .onlineBubble b{display:block;font-size:15px}@media(max-width:786px){.content-box .onlineBubble{display:none}}.content-box .register-button{background:-moz-linear-gradient(top,#00bc71 0,#00bc71 50%,#00bc71 50%,#00965a 50%,#00965a 50%,#00965a 100%);background:-webkit-linear-gradient(top,#00bc71 0,#00bc71 50%,#00bc71 50%,#00965a 50%,#00965a 50%,#00965a 100%);background:linear-gradient(to bottom,#00bc71 0,#00bc71 50%,#00bc71 50%,#00965a 50%,#00965a 50%,#00965a 100%);border:4px solid #00965a;height:100px;width:280px;position:absolute;top:320px;z-index:1;border-radius:2px;-webkit-border-radius:2px;text-align:center;display:block;right:50px}.content-box .register-button:hover{background:-moz-linear-gradient(top,#00cb7a 0,#00cb7a 50%,#00cb7a 50%,#00a362 50%,#00a362 50%,#00a362 100%);background:-webkit-linear-gradient(top,#00cb7a 0,#00cb7a 50%,#00cb7a 50%,#00a362 50%,#00a362 50%,#00a362 100%);background:linear-gradient(to bottom,#00cb7a 0,#00cb7a 50%,#00cb7a 50%,#00a362 50%,#00a362 50%,#00a362 100%);border:4px solid #00a362}.content-box .register-button .big_text{font-weight:700;display:block;font-size:28px;padding:14px 0 0}.content-box .register-button .small_text{font-size:24px}.content-box .welcome-message{position:absolute;top:215px;left:60px;z-index:1;width:550px;font-size:15px}@media(max-width:768px){.content-box .welcome-message{display:none}}@media(max-width:992px){.content-box .welcome-message{width:350px}}.content-box .welcome-message h2{text-transform:uppercase;font-weight:600;margin-bottom:20px}.info-box{background:#21252B;border:2px solid #2C323C;padding:15px;height:130px;width:100%;float:left;z-index:1;margin-bottom:10px}@media(max-width:992px){.info-box{height:100px}}.info-box .image{background:center center no-repeat;height:90px;width:90px;border-radius:50px;-webkit-border-radius:50px;margin-top:4px;float:left}@media(max-width:786px){.content-box .register-button{display:none}.info-box .image{height:60px;width:60px;margin-top:16px;position:static}}@media(max-width:1080px){.info-box .image{height:60px;width:60px;margin-top:16px}}.info-box .desc{float:right;width:205px;margin-top:5px}@media(max-width:786px){.info-box .desc{width:190px;margin-right:5px}}@media(max-width:992px){.info-box .image{position:relative;top:-12px}.info-box{display:none}.info-box .desc{margin-top:15px;width:auto}}
