enhance: Add article card component

--- a/apps/imagine-web/public/css/imagine.css
+++ b/apps/imagine-web/public/css/imagine.css
@@ -2,6 +2,7 @@ html,
 body,
 #root {
     background: #eaeaeaff;
+    font-family: 'Noto Sans', sans-serif;
     min-width: 100%;
     min-height: 100%;
     width: 100%;
