--- a/apps/imagine-web/src/components/game-client/game-client-actions/GameClientActions.css
+++ b/apps/imagine-web/src/components/game-client/game-client-actions/GameClientActions.css
@@ -9,6 +9,7 @@
     border: 2px solid #138cc8;
     border-radius: 5px;
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
     color: #fff;
     font-weight: 600;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
