--- a/apps/nitro-react/src/components/room/widgets/chat-input/ChatInputView.scss
+++ b/apps/nitro-react/src/components/room/widgets/chat-input/ChatInputView.scss
@@ -37,12 +37,12 @@
         vertical-align: top;
         height: 100%;
         padding: 0 10px;
-        
+
         &::after,
         input,
         textarea {
             width: auto;
-            min-width: 1em;
+            min-width: 400px;
             grid-area: 1 / 2;
             margin: 0;
             resize: none;
@@ -51,7 +51,7 @@
             border: none;
             outline: none;
         }
-        
+
         &::after {
             content: attr(data-value) '  ';
             visibility: hidden;
